# surveys-manager

./: .gitignore  AUTHORS  INSTALL  README  configure.ac
src/: Makefile.am  configuration.cc  configuration.hh  curl_service_connector.cc  curl_service_connector.hh  main.cc  survey.cc  survey.hh  surveys_provider.cc  surveys_provider.hh  surveys_service_client.cc  surveys_service_client.hh
test/: Makefile.am  cpputest_main.cc  sample_test.cc
